src/components/AllServicesDropdown/AllServicesDropdown.scss
@import '~@patternfly/patternfly/sass-utilities/_index';

.chr-c-link-service-toggle {
  // override menu toggle extra bottom border
  &.pf-v6-c-menu-toggle::after {
    border-bottom: none;
  }
  &.pf-v6-c-menu-toggle:hover::after, &.pf-m-expanded::after {
    border-bottom: var(--pf-v6-global--BorderWidth--lg) solid var(--pf-v6-global--info-color--100);
  }
}

.chr-c-page__services-nav-dropdown-menu {
  @media screen and (min-width: 1450px) {
    top: 55px;
    height: 100vh;
  }
  @media screen and (max-width: 1450px) {
    top: 110px;
    height: 100vh;
  }

  // pos has to be important to override PF styles that get lazy loaded!
  position: absolute !important;
  z-index: 1000;
  .pf-v6-c-dropdown__menu::before {
    z-index: -1000;
  }

  // To not cover the entire screen including masthead
  .pf-v6-c-backdrop {
    position: relative;
  }
  .pf-v6-c-dropdown__menu {
    position: relative; // make sure to enable scroll within backdrop
    top: 0;
  }
}

@media (max-width: var(--pf-t--global--breakpoint--md)) {
  .chr-c-panel-services-nav {
    .chr-l-stack__item-browse-all-services {
      background: var(--pf-v6-global--BackgroundColor--200);
      border-bottom: var(--pf-v6-global--BorderWidth--sm) solid var(--pf-v6-global--BorderColor--dark-100);
    }
    .pf-v6-c-tabs {
      background: var(--pf-v6-global--BackgroundColor--200);
      border-bottom: var(--pf-v6-global--BorderWidth--sm) solid var(--pf-v6-global--BorderColor--dark-100);
      height: 100%;
    }
    .pf-v6-c-sidebar__panel {
      --pf-v6-l-flex--RowGap: 0;
    }
  }
}

@media (min-width: 745px) {
  .chr-c-panel-services-nav {
    .chr-l-stack__item-browse-all-services {
      border-bottom: var(--pf-v6-global--BorderWidth--sm) solid var(--pf-v6-global--BorderColor--dark-100);  
    }
    .pf-v6-c-sidebar {
      --pf-v6-c-sidebar__panel--md--FlexBasis: 20rem;
      --pf-v6-c-sidebar__panel--BackgroundColor: var(--pf-v6-global--BackgroundColor--200);
      &__main {
        height: 630px;
      }
      &__content {
        height: 630px;  
        overflow: auto;
      }
      &__panel {
        height: 630px;
        box-shadow: inset -4px 0 4px -4px rgba(0, 0, 0, 0.16);
        .pf-v6-c-tabs {
          --pf-v6-c-tabs__item--m-current__link--after--BorderColor: transparent;
          --pf-v6-c-tabs--m-vertical__link--PaddingTop: var(--pf-t--global--spacer--sm);
          --pf-v6-c-tabs--m-vertical__link--PaddingBottom: var(--pf-t--global--spacer--sm);
          --pf-v6-c-tabs__link--PaddingRight: var(--pf-t--global--spacer--md);
          --pf-v6-c-tabs__link--PaddingLeft: var(--pf-t--global--spacer--md);
          --pf-v6-c-tabs__item--m-current__link--Color: var(--pf-v6-global--link--Color);
          --pf-v6-c-tabs--m-vertical--MaxWidth: 100%;
          --pf-v6-c-tabs--m-vertical__list--before--BorderColor: transparent;
          .pf-v6-c-tabs__item:hover, .pf-v6-c-tabs__item:focus {
            button {
              color: var(--pf-v6-global--primary-color--200)
            }
          } 
          .pf-v6-c-tabs__item.pf-m-current {
            --pf-v6-c-tabs__link--BackgroundColor: var(--pf-v6-global--BackgroundColor--100);
          }
        }
      }
      .pf-v6-c-card {
        --pf-v6-c-card--first-child--PaddingTop: var(--pf-t--global--spacer--md);
      }
    }
  }
}

